--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-.App {
+/* .App {
   text-align: center;
+  background-color: #d1d8e0;
+  color: ;
 }
 
 .App-logo {
@@ -36,3 +38,176 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  margin-left:35em;
+  margin-top: 5em;
+  background-color: #F8EFBA;
+}
+.heading{
+  color: blue;
+  padding-left: 10em;
+  
+}
+.balance{
+  padding-left: 30em;
+  margin-top: 1em;
+  font-size: large;
+}
+.income{
+  padding-left: 20em;
+}
+.expense{
+  position: relative;
+  left: 22em;
+}
+.ex{
+  position: relative;
+  left: 25em;
+}
+.inputam,.inputex{
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  margin-left: 6em;
+  padding: 0.2em 2em;
+  width: 60%;
+  border-radius: 0.4em;
+}
+.transaction{
+  margin: 10px 18em;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 2em;
+}
+.addTansact{
+  margin-left: 11.5em;
+  margin-bottom: 1em;
+}
+.newData{
+  display: flex;
+}
+.newData li,.newData p{
+  padding: 2em 5em;
+  list-style-type: none;
+  padding-top: 0.4em;
+  padding-left:1em;
+  list-style-type: none;
+  width: 38.5%;
+  height: 2.1em;
+  text-decoration: none;
+  border: 1px solid black;
+  background-color: #95afc0;
+  color: white;
+  margin-top: 1em;
+}
+li button{
+  margin-left: -2em;
+}
+.newAdd{
+  position: relative;
+  left: 28em;
+}
+.newRem{
+  position: relative;
+  left: 30em;
+}
+.trhead{
+  margin: 1em 15em;
+}
+.des,.amt,.act{
+  padding-left: 15em;
+}
+*/
+.main{
+  background-color: #d1d8e0;
+}
+ .header{
+  background-color: #a5b1c2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0em 0em;
+  margin-bottom: 2em;
+  height: 8em;
+  width: 100%;
+  position: fixed; 
+}
+nav ul{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+nav ul li a{
+  text-decoration: none;
+  margin-right: 5em;
+  color:#3867d6;
+  font-size: large;
+  font-weight: 500;
+}
+nav ul li{
+  list-style: none;
+}
+.inputbtn{
+  margin-right: 2em;
+}
+.inputbtn input{
+  position: relative;
+  right: 10em;
+  padding-left: 1em;
+  height: 2em;
+  width: 20em;
+  border-radius: 0.2em;
+  border: none;
+}
+.inputbtn button{
+  position: relative;
+  right: 9em;
+  height: 2em;
+}
+.details{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.moviecard{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 20em;
+  padding: 0em 1em;
+  margin-top: 8em;
+  margin-bottom: -2em;
+  margin-left: 2em;
+  background-color: white;
+}
+.over h5{
+  padding-left: 3em;
+}
+.over p{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+  padding: 5px 5px;
+  height: 5em;
+  overflow:scroll;
+  
+}
+.over p::-webkit-scrollbar {
+  display: none;
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  line-break: auto;
+}
+.imgstyle{
+  padding-top: 1em;
+  width: 18em;
+  height: 20em;
+}
+.omplecated{
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+}
+.rating{
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+  
